--- a/html_version/main_rules.html
+++ b/html_version/main_rules.html
@@ -8,15 +8,16 @@
 	<p class="p_main">
 		<b>Основные аспекты системы</b>
 		<br/>
-		Каждый игрок начинает с определенным количеством очков кармы, доступным его персонажу для развития. 
+		Каждый игрок начинает с определенным количеством очков кармы*, доступным его персонажу для развития. 
 		Стартовое значение кармы определяется мастером. <br/>Во время игры за определенные достижения мастер может выдавать дополнительные очки кармы. 
 		Если он слишком долго этого не делает, а игроки забывают ему об этом истошно вопить, то все в порядке. 
 		Иначе мастер имеет полное право сменить одного или двух игроков, а те в свою очередь мастера и систему.
 		<br/>
+		*Карма - вселенский причинно-следственный закон, согласно которому праведные или греховные действия человека определяют его судьбу, испытываемые им страдания или наслаждения. В контексте системы Карма - показатель персонажа расходуемый игроком для создания идивидуальных особенностей персонажа. Иначе может быть интрепретирован как очки создания персонажа. 
 		<br/>
 		<b>Основные характеристики:</b><br/>
-		<i>Сила</i> - характеристика, показывающая то, на сколько ваш герой сильнее или слабее окружающей серой массы. 
-		Повышает <i>базовую нагрузку</i> на 5, учитывается при расчете урона в ближнем(иногда и дальнем) бою, а так же при блокировании и попадании оружием ближнего боя.<br/>
+		<i>Сила</i> - характеристика физической силы персонажа, показывающая на сколько ваш герой сильнее или слабее окружающей серой массы. 
+		Повышает <i>базовую нагрузку</i> на 5 фунтов, учитывается при расчете наносимого атаками персонажа урона в бою, а так же при блокировании чужих атак и попадании в ближнем бою.<br/>
 		<i>Проворство</i> - ловкость и подвижность вашего альтер эго, показывает насколько он стремителен и скоординирован. 
 		Повышает <i>инициативу</i> на 1, <i>скорость передвижения</i> на 5, учитывается при расчете уклонения и попадания оружием дальнего боя.<br/>
 		<i>Выносливость</i> - показатель вашего общего физического развития, конституции и защитных функций вашего организма. 
